[package]
name = "deckview"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = "4.5.32"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
eframe = "0.31.1"
egui = "0.31.1"
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.9.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
